# recipes/models.py
@@ -54,6 +54,17 @@ class Recipe(models.Model):
         self.slug = f'{str(self.id)[:8]}-{slugify(self.name)}'
         super(Recipe, self).save(*args, **kwargs)
 
+    @staticmethod
+    def can_user_edit_recipe(recipe_id, user_id):
+        recipe_author_id = Recipe.objects.filter(
+            pk=recipe_id
+        ).values_list('author_id', flat=True).get()
+
+        if recipe_author_id == user_id:
+            return True
+
+        return ShareConfig.sharing_exists(recipe_author_id, user_id)
+
     def __str__(self):
         return f'Recipe <{self.name}>'
 
@@ -85,3 +96,13 @@ class ShareConfig(models.Model):
         related_name='grantee',
     )
     role = models.CharField(max_length=20, choices=ROLE_CHOICES, default=EDITOR)
+
+    @staticmethod
+    def sharing_exists(user_1_id, user_2_id):
+        """
+        Check if user_1 has access to user_2's recipes, and vice versa.
+        """
+        return ShareConfig.objects.filter(
+            (models.Q(granter_id=user_1_id) & models.Q(grantee_id=user_2_id))
+            | (models.Q(granter_id=user_2_id) & models.Q(grantee_id=user_1_id))
+        ).exists()
